--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3265,7 +3265,7 @@ button,
 }
 
 /* =========================================
-   COSMIC POLISH UPGRADE (Add to bottom of CSS)
+   COSMIC POLISH UPGRADE 
    ========================================= */
 
 /* 1. Smoother Glassmorphism for Main Articles */
@@ -3467,5 +3467,6 @@ h1, .section-title {
     font-weight: 900;
     display: inline-block;
 }
+
 
 
